# experiments-platform-api

./: .gitignore  .pre-commit-config.yaml  conftest.py  docker-compose.yaml  pyproject.toml
.github/workflows/: test_and_build.yml
apps/accounts/: models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/experiments/: models.py  serializers.py  tests.py  urls.py  views.py
apps/experiments/migrations/: 0001_initial.py  0002_dataset.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  production.py
