[project]
name = "experiments-platform-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.5",
    "djangorestframework-stubs[compatible-mypy]>=3.17.0",
    "mypy>=2.1.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.16",
]

[tool.mypy]
python_version = "3.13"

plugins = ["mypy_django_plugin.main"]

strict = true

warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true

exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = ["*.migrations.*"]
ignore_errors = true


[tool.django-stubs]
django_settings_module = "config.settings.dev"
